--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ packaging==20.3
 pep517==0.8.2
 progress==1.5
 prompt-toolkit==3.0.17
+psycopg2-binary==2.8.6
 pyparsing==2.4.6
 pytoml==0.1.21
 pytz==2021.1
